--- a/w9_BlockGCD/w9_BlockGCD/Base.lproj/Main.storyboard
+++ b/w9_BlockGCD/w9_BlockGCD/Base.lproj/Main.storyboard
@@ -30,9 +30,30 @@
                                     <action selector="buttonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y8F-Ud-XC1"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adE-Ob-Jqb">
+                                <rect key="frame" x="46" y="178" width="68" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="68" id="4c1-Eq-djb"/>
+                                    <constraint firstAttribute="height" constant="30" id="8iK-nl-o6F"/>
+                                </constraints>
+                                <state key="normal" title="Read"/>
+                                <connections>
+                                    <action selector="bookButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YQp-FK-yjU"/>
+                                </connections>
+                            </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pHr-z5-j0b">
+                                <rect key="frame" x="57" y="250" width="190" height="2"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="190" id="luU-0d-oOb"/>
+                                </constraints>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="adE-Ob-Jqb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="26" id="2xN-kd-cC5"/>
+                            <constraint firstItem="adE-Ob-Jqb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="158" id="K3P-oF-tyd"/>
+                            <constraint firstItem="pHr-z5-j0b" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="230" id="QSj-Nd-zTL"/>
+                            <constraint firstItem="pHr-z5-j0b" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="37" id="SSi-pi-wGM"/>
                             <constraint firstItem="axF-vd-aY1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="26" id="kkt-Zk-kHS"/>
                             <constraint firstItem="axF-vd-aY1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="nKh-L3-lVi"/>
                         </constraints>
@@ -43,10 +64,12 @@
                         <outlet property="buttonTopConstraint" destination="nKh-L3-lVi" id="fOU-BP-FQg"/>
                         <outlet property="buttonWidthConstraint" destination="qHl-cz-tkh" id="q0e-Ei-Hmk"/>
                         <outlet property="firstButton" destination="axF-vd-aY1" id="buD-C4-QRD"/>
+                        <outlet property="progressBar" destination="pHr-z5-j0b" id="GEb-Rb-J3m"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="322"/>
         </scene>
     </scenes>
 </document>
